name:                arc-lite
version:             0.0.0.0
synopsis:            Arcanist "lite" (CLI tool for Phabricator)
homepage:            http://github.com/
license:             GPL-3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
category:            Development
build-type:          Simple
cabal-version:       >=1.10
bug-reports:         https://github.com/haskell-infra/arc-lite/issues

extra-source-files:  ChangeLog.md

executable arc-lite
  default-language: Haskell2010
  other-extensions:
    DeriveAnyClass
    DeriveGeneric
    LambdaCase
    OverloadedStrings
    RecordWildCards
    TypeOperators

  hs-source-dirs: src

  main-is: Main.hs
  other-modules:
    Network.Conduit.Client
    Network.Http.Client.Extras

  build-depends:
    HsOpenSSL            >=0.11 && <0.12,
    aeson                >=0.9  && <0.10,
    base                 >=4.8  && <4.9,
    base16-bytestring    >=0.1  && <0.2,
    bytestring           >=0.10 && <0.11,
    cryptohash           >=0.11 && <0.12,
    deepseq              >=1.4  && <1.5,
    directory            >=1.2  && <1.3,
    filepath             >=1.4  && <1.5,
    http-streams         >=0.8  && <0.9,
    io-streams           >=1.3  && <1.4,
    lens                 >=4.12 && <4.13,
    lens-aeson           >=1.0  && <1.1,
    mtl                  >=2.2  && <2.3,
    network-uri          >=2.6  && <2.7,
    optparse-applicative >=0.11 && <0.12,
    text                 >=1.2  && <1.3,
    time                 >=1.5  && <1.6,
    unordered-containers >=0.2  && <0.3

  ghc-options: -Wall -threaded

source-repository head
  type: git
  location: https://github.com/haskell-infra/arc-lite.git